reverts commit 199c4f8080b35db959879f8c7524147b49eba14a.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "productName": "Quasar Admin",
   "cordovaId": "org.cordova.quasar.app",
   "capacitorId": "",
-  "author": "pratikpatelpp802@gmail.com",
+  "author": "chedo.tdev@gmail.com",
   "private": true,
   "scripts": {
     "test": "echo \"No test specified\" && exit 0"
